update content and style

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
           <div class="timeline__card">
             <div class="timeline__card-title"><h3>We-Plus HK Limited</h3></div>
-            <div class="timeline__card-role"><h4>Senior iOS Developer</h4></div>
+            <div class="timeline__card-role"><h5>Senior iOS Developer</h5></div>
             <ul>
               <li>Develop and maintain Native iOS app and SDKs</li>
               <li>Guide other developers to complete tasks</li>
@@ -102,7 +102,7 @@
           </div>
           <div class="timeline__card">
             <div class="timeline__card-title"><h3>HKJC</h3></div>
-            <div class="timeline__card-role"><h4>Assistant Technical Manager, Application Development</h4></div>
+            <div class="timeline__card-role"><h5>Assistant Technical Manager, Application Development</h5></div>
             <ul>
               <li>Manage the development and maintenance of React Native and Native mobile applications</li>
               <li>Manage and lead developers, coaching and assigning tasks, and monitoring progress to ensure project
@@ -120,7 +120,7 @@
           </div>
           <div class="timeline__card">
             <div class="timeline__card-title"><h3>Signify</h3></div>
-            <div class="timeline__card-role"><h4>Development Engineer (H16)</h4></div>
+            <div class="timeline__card-role"><h5>Development Engineer (H16)</h5></div>
             <ul>
               <li>Develop and maintain Native and Hybrid smart light mobile applications from scratch</li>
               <li>Develop custom Flutter packages based on specific business requirements, e.g. NFC tag</li>
@@ -143,7 +143,7 @@
           </div>
           <div class="timeline__card">
             <div class="timeline__card-title"><h3>S.G.D Network Technology Limited</h3></div>
-            <div class="timeline__card-role"><h4>Mobile App Developer</h4></div>
+            <div class="timeline__card-role"><h5>Mobile App Developer</h5></div>
             <ul>
               <li>Refactor the iOS app architecture from MVC to MVVM with RxSwift</li>
               <li>Build an internal ERP app from scratch using SwiftUI</li>
@@ -162,7 +162,7 @@
           </div>
           <div class="timeline__card">
             <div class="timeline__card-title"><h3>Molecule Financial Limited</h3></div>
-            <div class="timeline__card-role"><h4>Software Developer</h4></div>
+            <div class="timeline__card-role"><h5>Software Developer</h5></div>
             <ul>
               <li>Develop social media app for iOS</li>
               <li>Work closely with backend engineer to design and tweak RESTFUL/GraphQL API</li>
@@ -179,7 +179,7 @@
           </div>
           <div class="timeline__card">
             <div class="timeline__card-title"><h3>Green Tomato Limited</h3></div>
-            <div class="timeline__card-role"><h4>Developer (iOS)</h4></div>
+            <div class="timeline__card-role"><h5>Developer (iOS)</h5></div>
             <ul>
               <li>Collaborate with team members to develop and maintain different mobile apps</li>
               <li>Demonstrate app to client/product owner when necessary</li>
@@ -338,7 +338,7 @@
         <div class="project">
           <h3>D-Day</h3>
           <p class="project__description">
-            Do business better by collecting payments quickly and securely with PayMe for Business!
+            An useful app for remembering and countdwon important date.
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">Swift</li>
