--- a/index.html
+++ b/index.html
@@ -98,24 +98,6 @@
 
         <div class="timeline__item">
           <div class="timeline__left">
-            <div class="timeline__date"><h5>Jan 2024 - Mar 2024</h5></div>
-          </div>
-          <div class="timeline__card">
-            <div class="timeline__card-title"><h3>HKJC</h3></div>
-            <div class="timeline__card-role"><h5>Assistant Technical Manager, Application Development</h5></div>
-            <ul>
-              <li>Manage the development and maintenance of React Native and Native mobile applications</li>
-              <li>Manage and lead developers, coaching and assigning tasks, and monitoring progress to ensure project
-                success</li>
-              <li>Provide technical advice and documents for the requirements</li>
-              <li>Collaborate with other departments to ensure the integration of mobile applications with other systems
-                and platforms, ensuring the consistency and quality of the user experience</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="timeline__item">
-          <div class="timeline__left">
             <div class="timeline__date"><h5>May 2021 - Jan 2024</h5></div>
           </div>
           <div class="timeline__card">
@@ -232,8 +214,13 @@
           <ul class="project__stack">
             <li class="project__stack-item">Flutter</li>
             <li class="project__stack-item">Swift</li>
+            <li class="project__stack-item">SwiftUI</li>
+            <li class="project__stack-item">Kotlin</li>
+            <li class="project__stack-item">MVVM</li>
+            <li class="project__stack-item">BLoC</li>
             <li class="project__stack-item">Kotlin</li>
             <li class="project__stack-item">CI/CD</li>
+            <li class="project__stack-item">Bluetooth</li>
           </ul>
 
           <a href="https://apps.apple.com/hk/app/wiz-connected/id1587655962" aria-label="ios" class="link link--icon">
@@ -241,27 +228,6 @@
           </a>
           <a href="https://play.google.com/store/apps/details?id=com.wizconnected.wiz2&hl=en" aria-label="android"
             class="link link--icon">
-            <i aria-hidden="true" class="fab fa-android"></i>
-          </a>
-        </div>
-
-        <div class="project">
-          <h3>Classic 3-in-1</h3>
-          <p class="project__description">
-            Classic 3-in-1 is an integrated mobile betting app for Racing, Football and Mark Six. It offers
-            comprehensive information and all-round functions, allowing you to enjoy superb digital wagering experience
-            anytime and anywhere.
-          </p>
-          <ul class="project__stack">
-            <li class="project__stack-item">React Native</li>
-            <li class="project__stack-item">TypeScript</li>
-          </ul>
-
-          <a href="https://apps.apple.com/hk/app/hkjc-classic-3-in-1/id432462569?l=en-GB" aria-label="ios"
-            class="link link--icon">
-            <i aria-hidden="true" class="fab fa-app-store-ios"></i>
-          </a>
-          <a href="https://m.hkjc.com/en/download-classic-3-in-1.html" aria-label="android" class="link link--icon">
             <i aria-hidden="true" class="fab fa-android"></i>
           </a>
         </div>
@@ -290,6 +256,7 @@
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">Swift</li>
+            <li class="project__stack-item">MVVM</li>
             <li class="project__stack-item">Bluetooth</li>
           </ul>
 
